# cehrgpt

./: README.md  data_generation.md  feature_representation.md  pyproject.toml  spark_setup.md  synthetic_data_generation.md  zero_shot_prediction.md
AoU_tutorial/: run_CEHR-GPT_aou.ipynb  run_MOTOR_aou.ipynb
sample_configs/: credential_file_sample.ini
sample_data/omop_vocab/concept/: concept.parquet
scripts/: create_cehrgpt_pretraining_data.sh  extract_features_gpt.sh  omop_pipeline.sh  run_linear_prob.sh
src/cehrgpt/: gpt_utils.py
src/cehrgpt/analysis/: irregularity.py
src/cehrgpt/data/: hf_cehrgpt_dataset.py  hf_cehrgpt_dataset_collator.py  hf_cehrgpt_dataset_mapping.py  sample_packing_sampler.py
src/cehrgpt/models/: config.py  hf_cehrgpt.py  hf_modeling_outputs.py  tokenization_hf_cehrgpt.py
src/cehrgpt/runners/: data_utils.py  hf_cehrgpt_finetune_runner.py  hf_cehrgpt_pretrain_runner.py  hf_gpt_runner_argument_dataclass.py  hyperparameter_search_util.py  sample_packing_trainer.py
src/cehrgpt/tools/linear_prob/: compute_cehrgpt_features.py
tests/integration_tests/runners/: hf_cehrgpt_pretrain_runner_test.py  hf_cehrgpt_pretrain_sample_packing_runner_test.py
tests/unit_tests/runners/: hf_cehrgpt_finetune_runner_test.py
